--- a/LoSW_Corpus/LoSW_Corpus.csproj
+++ b/LoSW_Corpus/LoSW_Corpus.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.2" />
     <PackageReference Include="pythonnet" Version="3.0.3" />
   </ItemGroup>
 
